# gameboy-emulator-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: desktop_rust.yml  gb_core_rust.yml  web_rust.yml
core/: Cargo.toml
core/src/: lib.rs  mmu.rs  timer.rs
core/src/cartridge/: header.rs  mbc0.rs  mbc1.rs  mbc5.rs  mod.rs
core/src/cpu/: instructions.rs  mod.rs
core/src/ppu/: mod.rs
desktop/: Cargo.toml
desktop/src/: audio.rs  keymap.rs  main.rs  renderer.rs  runner.rs
gb_core/: Cargo.toml
gb_core/src/: input.rs  lib.rs
gb_core/src/apu/: mod.rs  square.rs  wave.rs
gb_core/src/cartridge/: mod.rs
gb_core/src/cpu/: alu.rs  interrupts.rs  mod.rs  registers.rs
web/: Cargo.toml  index.html
web/src/: main.rs  server.rs  state.rs
